exclude typings file and fix PULL_FROM_NPM flag to use package name

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ node_modules
 bin/
 definitions/external/
 definitions/generated/
+plugin-testing-framework/typings/
 
 # Environment variables
 *.env
