--- a/e2e/package.json
+++ b/e2e/package.json
@@ -11,6 +11,7 @@
     "license": "MIT",
     "dependencies": {
         "assert": "^1.4.1",
+        "mocha-junit-reporter": "latest",
         "nixt": "^0.5.0",
         "q": "~1.4.1",
         "try-json": "^1.0.0"
