--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-typescript": "^2.7.8",
     "gulp-util": "^3.0.6",
     "merge2": "^0.3.6",
+    "mocha-junit-reporter": "latest",
     "node-libs-browser": "^0.5.2",
     "node-rsa": "^0.2.24",
     "require-all": "^1.1.0",
