--- a/package.json
+++ b/package.json
@@ -1,33 +1,23 @@
 {
-  "devDependencies": {
-    "chmod": "^0.2.1",
-    "del": "^1.2.0",
-    "dotenv": "^1.2.0",
-    "dts-generator": "1.5.0",
-    "express": "^4.13.1",
-    "gulp": "^3.9.0",
-    "gulp-debug": "^2.0.1",
-    "gulp-if": "^1.2.5",
-    "gulp-install": "^0.4.0",
-    "gulp-istanbul": "^0.10.0",
-    "gulp-load-plugins": "^1.0.0-rc.1",
-    "gulp-mocha": "^2.1.2",
-    "gulp-plumber": "^1.0.1",
-    "gulp-tsd": "0.0.4",
-    "gulp-typescript": "^2.7.8",
-    "gulp-util": "^3.0.6",
-    "merge2": "^0.3.6",
-    "node-libs-browser": "^0.5.2",
-    "node-rsa": "^0.2.24",
-    "require-all": "^1.1.0",
-    "run-sequence": "^1.1.2",
-    "sinon": "1.16.0",
-    "superagent-mock": "^1.3.0",
-    "supertest": "^1.0.1",
-    "through2": "^2.0.0",
-    "ts-jsx-loader": "^0.2.1",
-    "typescript": "1.5.0-alpha",
-    "webpack": "^1.10.1",
-    "which": "^1.1.1"
+  "name": "code-push",
+  "version": "1.10.0-beta",
+  "description": "Management SDK for the CodePush service",
+  "main": "script/index.js",
+  "scripts": {
+    "test": "gulp"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Microsoft/code-push.git"
+  },
+  "author": "Microsoft Corporation",
+  "license": "MIT",
+  "homepage": "https://microsoft.github.io/code-push",
+  "dependencies": {
+    "base-64": "^0.1.0",
+    "node-uuid": "^1.4.3",
+    "q": "^1.4.1",
+    "superagent": "^1.7.2",
+    "superagent-proxy": "^1.0.0"
   }
 }
