--- a/package.json
+++ b/package.json
@@ -1,33 +1,54 @@
 {
-  "devDependencies": {
-    "chmod": "^0.2.1",
-    "del": "^1.2.0",
-    "dotenv": "^1.2.0",
-    "dts-generator": "1.5.0",
-    "express": "^4.13.1",
-    "gulp": "^3.9.0",
-    "gulp-debug": "^2.0.1",
-    "gulp-if": "^1.2.5",
-    "gulp-install": "^0.4.0",
-    "gulp-istanbul": "^0.10.0",
-    "gulp-load-plugins": "^1.0.0-rc.1",
-    "gulp-mocha": "^2.1.2",
-    "gulp-plumber": "^1.0.1",
-    "gulp-tsd": "0.0.4",
-    "gulp-typescript": "^2.7.8",
-    "gulp-util": "^3.0.6",
-    "merge2": "^0.3.6",
-    "node-libs-browser": "^0.5.2",
-    "node-rsa": "^0.2.24",
-    "require-all": "^1.1.0",
-    "run-sequence": "^1.1.2",
-    "sinon": "1.16.0",
-    "superagent-mock": "^1.3.0",
-    "supertest": "^1.0.1",
-    "through2": "^2.0.0",
-    "ts-jsx-loader": "^0.2.1",
-    "typescript": "1.5.0-alpha",
-    "webpack": "^1.10.1",
-    "which": "^1.1.1"
+  "name": "code-push-cli",
+  "version": "1.12.1-beta",
+  "description": "Management CLI for the CodePush service",
+  "main": "script/cli.js",
+  "scripts": {
+    "test": "gulp test"
+  },
+  "bin": {
+    "code-push": "script/cli.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Microsoft/code-push/"
+  },
+  "keywords": [
+    "code",
+    "push",
+    "cordova",
+    "react-native",
+    "react"
+  ],
+  "homepage": "https://microsoft.github.io/code-push",
+  "author": "Microsoft Corporation",
+  "license": "MIT",
+  "dependencies": {
+    "backslash": "^0.1.7",
+    "base-64": "^0.1.0",
+    "chalk": "^1.1.0",
+    "cli-table": "^0.3.1",
+    "code-push": "github:Microsoft/code-push#code-push-sdk-lite",
+    "email-validator": "^1.0.3",
+    "gradle-to-js": "0.1.0",
+    "moment": "^2.10.6",
+    "opener": "^1.4.1",
+    "parse-duration": "0.1.1",
+    "plist": "1.2.0",
+    "progress": "^1.1.8",
+    "prompt": "^0.2.14",
+    "properties": "^1.2.1",
+    "q": "~1.4.1",
+    "recursive-fs": "0.1.4",
+    "rimraf": "^2.5.1",
+    "semver": "4.3.6",
+    "simctl": "0.0.9",
+    "slash": "1.0.0",
+    "update-notifier": "^0.5.0",
+    "which": "^1.2.7",
+    "wordwrap": "1.0.0",
+    "xml2js": "^0.4.16",
+    "yargs": "^3.15.0",
+    "yazl": "2.2.2"
   }
 }
