--- a/cli/package.json
+++ b/cli/package.json
@@ -24,12 +24,14 @@
   "author": "Microsoft Corporation",
   "license": "MIT",
   "dependencies": {
+    "base-64": "0.1.0",
     "backslash": "^0.1.7",
     "chalk": "^1.1.0",
     "cli-table": "^0.3.1",
     "code-push": "1.11.1-beta",
     "email-validator": "^1.0.3",
     "gradle-to-js": "0.2.5",
+    "jsonwebtoken": "7.4.0",
     "moment": "^2.10.6",
     "opener": "^1.4.1",
     "parse-duration": "0.1.1",
@@ -42,6 +44,7 @@
     "rimraf": "^2.5.1",
     "semver": "4.3.6",
     "simctl": "0.0.9",
+    "slash": "1.0.0",
     "update-notifier": "^0.5.0",
     "which": "^1.2.7",
     "wordwrap": "1.0.0",
